# sp

./: .gitignore  Cargo.toml  README.md
resources/: display_config.ron  input.ron
resources/models/: ship.gltf
resources/prefabs/characters/: default.ron  quartz.ron
src/: main.rs  render_graph.rs
src/components/: body.rs  character.rs  characters.rs  lifetime.rs  mod.rs  player.rs  thruster.rs  timer.rs  tracker.rs
src/components/characters/: mod.rs  quartz.rs
src/rendering/: background.rs  graph.rs  mod.rs
src/resources/: material.rs  mod.rs  prefabs.rs  primitive.rs
src/states/: loading.rs  main.rs  mod.rs
src/systems/: character.rs  input.rs  lifetime.rs  mod.rs  physics.rs  thruster.rs  tracker.rs
src/util/: input.rs  mod.rs
