[package]
name = "sp"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/kabergstrom/amethyst", features = ["nightly", "metal", "gltf"], branch = "new-asset-system" }
serde = "*"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
