[package]
name = "sp"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", features = ["nightly", "vulkan", "gltf"] }
specs-physics = { git =     "https://github.com/piedoom/specs-physics", branch = "amethyst-example" }
serde = { version = "*", features = ["derive"] }
nalgebra-glm = "*"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
